// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/starts/Button renders a button 1`] = `
.c0 {
  font-family: 'Raleway',sans-serif;
  font-size: 16px;
  font-weight: 800;
  background-color: #1C104E;
  color: #FFFFFF;
  display: inline-block;
  padding: 16px;
  border: none;
  line-height: 1;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Button__StyledButton
  onClick={[Function]}
  text="Button"
  type="primary"
>
  <Button
    className="c0"
    external={false}
    onClick={[Function]}
    text="Button"
    type="primary"
    url=""
  >
    <button
      className="c0"
      onClick={[Function]}
      type="button"
    >
      Button
    </button>
  </Button>
</Button__StyledButton>
`;

exports[`components/starts/Button renders a secondary button 1`] = `
.c0 {
  font-family: 'Raleway',sans-serif;
  font-size: 16px;
  font-weight: 800;
  background-color: #FFFFFF;
  color: #1C104E;
  display: inline-block;
  padding: 16px;
  border: none;
  line-height: 1;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Button__StyledButton
  text="Button"
  type="secondary"
>
  <Button
    className="c0"
    external={false}
    onClick={null}
    text="Button"
    type="secondary"
    url=""
  >
    <button
      className="c0"
      onClick={null}
      type="button"
    >
      Button
    </button>
  </Button>
</Button__StyledButton>
`;

exports[`components/starts/Button renders an external link 1`] = `
.c0 {
  font-family: 'Raleway',sans-serif;
  font-size: 16px;
  font-weight: 800;
  background-color: #1C104E;
  color: #FFFFFF;
  display: inline-block;
  padding: 16px;
  border: none;
  line-height: 1;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Button__StyledButton
  external={true}
  text="Button"
  type="primary"
  url="https://google.com"
>
  <Button
    className="c0"
    external={true}
    onClick={null}
    text="Button"
    type="primary"
    url="https://google.com"
  >
    <a
      className="c0"
      href="https://google.com"
      rel="noreferrer noopener"
      target="_blank"
    >
      Button
    </a>
  </Button>
</Button__StyledButton>
`;

exports[`components/starts/Button renders an interal link 1`] = `
.c0 {
  font-family: 'Raleway',sans-serif;
  font-size: 16px;
  font-weight: 800;
  background-color: #1C104E;
  color: #FFFFFF;
  display: inline-block;
  padding: 16px;
  border: none;
  line-height: 1;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Button__StyledButton
  text="Button"
  type="primary"
  url="/about"
>
  <Button
    className="c0"
    external={false}
    onClick={null}
    text="Button"
    type="primary"
    url="/about"
  >
    <a
      className="c0"
      href="/about"
      rel=""
      target=""
    >
      Button
    </a>
  </Button>
</Button__StyledButton>
`;
